--- a/midterm_practice-003/css/nav.css
+++ b/midterm_practice-003/css/nav.css
@@ -1,6 +1,6 @@
 
 .topbar-responsive {
-  background: #2c3840;
+  background:#004B93;
   padding: 1rem 1.5rem;
 }
 
@@ -10,7 +10,7 @@
 }
 
 .topbar-responsive .menu {
-  background: #2c3840;
+  background: #004B93;
 }
 
 .topbar-responsive .menu li:last-of-type {
